<resources>
    <string name="app_name">PracticaWebService</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_RegistroUsuario">Registrar Usuario</string>
    <string name="menu_ConsultarUsuario">Consultar Usuario</string>
    <string name="menu_ConsultarListaUsuario">Consultar Lista Usuario</string>
    <string name="menu_ConsultarListaUsuarioUrl">Consultar Usuario URL</string>
    <string name="menu_Desarrollador">Desarrollador</string>
    <string name="menu_ListaUsuarioImagen">Lista de Usuarios imagen</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
